--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
         <section id="publications">
             <h2 class="section-title">学术成果</h2>
             <p>我们的团队发表了大量高质量的学术论文，致力于推动科学与技术的前沿发展。</p>
+            <ul>
+                <li>Yuan, Ganzhangqin, et al. "Physics-aware cross-domain fusion aids learning-driven computer-generated holography." Photonics Research 12.12 (2024): 2747-2756. [<a href="https://opg.optica.org/prj/fulltext.cfm?uri=prj-12-12-2747&id=563451" target="_blank"> Paper 1</a>]</li>
+                <li>Yuan, Ganzhangqin, et al. "Error-compensation network for ringing artifact reduction in holographic displays." Optics Letters 49.11 (2024): 3210-3213.[<a href="https://opg.optica.org/ol/abstract.cfm?uri=ol-49-11-3210" target="_blank">Paper</a>]</li>
+                <li>Zhou, Mi, et al. "End-to-end compression-aware computer-generated holography." Optics Express 31.26 (2023): 43908-43919.[<a href="https://opg.optica.org/oe/fulltext.cfm?uri=oe-31-26-43908&id=544395" target="_blank">Paper</a>]</li>
+                <li>Wei, Yiran, et al. "Speckle-free holography with a diffraction-aware global perceptual model." Photonics Research 12.11 (2024): 2418-2423.[<a href="https://opg.optica.org/prj/fulltext.cfm?uri=prj-12-11-2418&id=561278" target="_blank">Paper</a>]</li>
+            </ul>
         </section>
 
         <!-- Contact Section -->
