--- a/index.html
+++ b/index.html
@@ -1,123 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实验室主页</title>
-    <link rel="stylesheet" href="style.css">
+    <title>实验室发表论文</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        .publication {
+            margin-bottom: 40px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .publication img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 4px;
+        }
+        .title {
+            font-size: 1.4em;
             color: #333;
+            margin: 10px 0;
         }
-        header {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            text-align: center;
-            padding: 1rem 0;
+        .authors {
+            color: #666;
+            font-style: italic;
         }
-        nav {
-            background-color: #34495e;
-            text-align: center;
-            padding: 0.5rem 0;
+        .links {
+            margin-top: 10px;
         }
-        nav a {
-            color: #ecf0f1;
-            text-decoration: none;
-            margin: 0 1rem;
-            font-size: 1rem;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            padding: 2rem;
-        }
-        footer {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-        .team, .projects {
-            margin-bottom: 2rem;
-        }
-        .section-title {
-            font-size: 1.5rem;
-            border-bottom: 2px solid #2c3e50;
-            margin-bottom: 1rem;
+        .links a {
             display: inline-block;
+            margin-right: 15px;
+            color: #0366d6;
+            text-decoration: none;
+        }
+        .links a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>欢迎来到我们的实验室</h1>
-        <p>探索科技前沿，推动创新研究</p>
-    </header>
-
-    <!-- Navigation -->
-    <nav>
-        <a href="#about">关于我们</a>
-        <a href="#team">研究团队</a>
-        <a href="#projects">研究项目</a>
-        <a href="#publications">学术成果</a>
-        <a href="#contact">联系我们</a>
-    </nav>
-
-    <!-- Main Content -->
-    <div class="container">
-        <!-- About Section -->
-        <section id="about">
-            <h2 class="section-title">关于我们</h2>
-            <p>我们的实验室致力于探索先进的技术和科学研究，涵盖多个领域，包括机器学习、信号处理、物理建模等。</p>
-        </section>
-
-        <!-- Team Section -->
-        <section id="team" class="team">
-            <h2 class="section-title">研究团队</h2>
-            <p>我们拥有一支由教授、博士生和研究助理组成的高水平研究团队。</p>
-        </section>
-
-        <!-- Projects Section -->
-        <section id="projects" class="projects">
-            <h2 class="section-title">研究项目</h2>
-            <p>实验室正在进行多个重要项目，包括但不限于：</p>
-            <ul>
-                <li>人工智能在时序预测中的应用</li>
-                <li>异构图结构分析与控制</li>
-                <li>增强现实与虚拟现实系统的开发</li>
-            </ul>
-        </section>
-
-        <!-- Publications Section -->
-        <section id="publications">
-            <h2 class="section-title">学术成果</h2>
-            <p>我们的团队发表了大量高质量的学术论文，致力于推动科学与技术的前沿发展。</p>
-            <ul>
-                <li>Yuan, Ganzhangqin, et al. "Physics-aware cross-domain fusion aids learning-driven computer-generated holography." Photonics Research 12.12 (2024): 2747-2756. [<a href="https://opg.optica.org/prj/fulltext.cfm?uri=prj-12-12-2747&id=563451" target="_blank"> Paper 1</a>]</li>
-                <li>Yuan, Ganzhangqin, et al. "Error-compensation network for ringing artifact reduction in holographic displays." Optics Letters 49.11 (2024): 3210-3213.[<a href="https://opg.optica.org/ol/abstract.cfm?uri=ol-49-11-3210" target="_blank">Paper</a>]</li>
-                <li>Zhou, Mi, et al. "End-to-end compression-aware computer-generated holography." Optics Express 31.26 (2023): 43908-43919.[<a href="https://opg.optica.org/oe/fulltext.cfm?uri=oe-31-26-43908&id=544395" target="_blank">Paper</a>]</li>
-                <li>Wei, Yiran, et al. "Speckle-free holography with a diffraction-aware global perceptual model." Photonics Research 12.11 (2024): 2418-2423.[<a href="https://opg.optica.org/prj/fulltext.cfm?uri=prj-12-11-2418&id=561278" target="_blank">Paper</a>]</li>
-            </ul>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contact">
-            <h2 class="section-title">联系我们</h2>
-            <p>地址：XX大学XX楼XX室</p>
-            <p>邮箱：contact@labdomain.com</p>
-            <p>电话：+86-123456789</p>
-        </section>
+    <h1>实验室论文发表</h1>
+    
+    <div class="publication">
+        <img src="path/to/paper1-image.jpg" alt="论文1示意图">
+        <h2 class="title">论文标题1</h2>
+        <p class="authors">作者1, 作者2, 作者3</p>
+        <p>发表于: 期刊/会议名称, 2024</p>
+        <div class="links">
+            <a href="#" target="_blank">📄 论文</a>
+            <a href="#" target="_blank">💻 代码</a>
+            <a href="#" target="_blank">🎥 视频</a>
+        </div>
     </div>
 
-    <!-- Footer -->
+    <div class="publication">
+        <img src="path/to/paper2-image.jpg" alt="论文2示意图">
+        <h2 class="title">论文标题2</h2>
+        <p class="authors">作者1, 作者2, 作者3</p>
+        <p>发表于: 期刊/会议名称, 2023</p>
+        <div class="links">
+            <a href="#" target="_blank">📄 论文</a>
+            <a href="#" target="_blank">💻 代码</a>
+            <a href="#" target="_blank">🎥 视频</a>
+        </div>
+    </div>
+
     <footer>
-        <p>&copy; 2024 实验室名称. 保留所有权利。</p>
+        <p>访问我们的 <a href="https://github.com/your-lab" target="_blank">GitHub</a> 获取更多信息</p>
     </footer>
 </body>
 </html>
