--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实验室发表论文</title>
+    <title>Publication</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,34 +47,34 @@
     </style>
 </head>
 <body>
-    <h1>实验室论文发表</h1>
+    <h1>Publication</h1>
     
     <div class="publication">
-        <img src="path/to/paper1-image.jpg" alt="论文1示意图">
-        <h2 class="title">论文标题1</h2>
-        <p class="authors">作者1, 作者2, 作者3</p>
-        <p>发表于: 期刊/会议名称, 2024</p>
+        <img src="path/to/paper1-image.jpg">
+        <h2 class="title">Error-compensation network for ringing artifact reduction in holographic displays</h2>
+        <p class="authors">Ganzhangqin Yuan, Mi Zhou, Yifan Peng, Muku Chen, Zihan Geng</p>
+        <p>Optics Letters, 2024</p>
         <div class="links">
-            <a href="#" target="_blank">📄 论文</a>
-            <a href="#" target="_blank">💻 代码</a>
-            <a href="#" target="_blank">🎥 视频</a>
+            <a href="https://opg.optica.org/ol/abstract.cfm?uri=ol-49-11-3210" target="_blank">📄 Paper</a>
+            <a href="https://github.com/MoyoungY/error-compensation-holography" target="_blank">💻 Code</a>
+            <a href="#" target="_blank">🎥 Demo</a>
         </div>
     </div>
 
     <div class="publication">
-        <img src="path/to/paper2-image.jpg" alt="论文2示意图">
-        <h2 class="title">论文标题2</h2>
-        <p class="authors">作者1, 作者2, 作者3</p>
-        <p>发表于: 期刊/会议名称, 2023</p>
+        <img src="path/to/paper2-image.jpg">
+        <h2 class="title">Physics-aware Cross-domain Fusion Network for Computer-Generated Holography</h2>
+        <p class="authors">Ganzhangqin Yuan, Mi Zhou, Fei Liu, Mu Ku Chen, Kui Jiang, Yifan Peng, Zihan Geng</p>
+        <p>Photonics Research, 2024</p>
         <div class="links">
-            <a href="#" target="_blank">📄 论文</a>
-            <a href="#" target="_blank">💻 代码</a>
-            <a href="#" target="_blank">🎥 视频</a>
+            <a href="https://opg.optica.org/prj/fulltext.cfm?uri=prj-12-12-2747&id=563451" target="_blank">📄 Paper</a>
+            <a href="https://github.com/MoyoungY/cross-domain-fusion-network" target="_blank">💻 Code</a>
+            <a href="#" target="_blank">🎥 Demo</a>
         </div>
     </div>
 
     <footer>
-        <p>访问我们的 <a href="https://github.com/your-lab" target="_blank">GitHub</a> 获取更多信息</p>
+        <p>Visit <a href="https://github.com/your-lab" target="_blank">GitHub</a> for more information</p>
     </footer>
 </body>
 </html>
