--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1>Publication</h1>
     
     <div class="publication">
-        <img src="path/to/paper1-image.jpg">
+        <img src="./paper1.jpg">
         <h2 class="title">Error-compensation network for ringing artifact reduction in holographic displays</h2>
         <p class="authors">Ganzhangqin Yuan, Mi Zhou, Yifan Peng, Muku Chen, Zihan Geng</p>
         <p>Optics Letters, 2024</p>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="publication">
-        <img src="path/to/paper2-image.jpg">
+        <img src="./paper2.jpg">
         <h2 class="title">Physics-aware Cross-domain Fusion Network for Computer-Generated Holography</h2>
         <p class="authors">Ganzhangqin Yuan, Mi Zhou, Fei Liu, Mu Ku Chen, Kui Jiang, Yifan Peng, Zihan Geng</p>
         <p>Photonics Research, 2024</p>
